# Poisson_FEM

./: CMakeLists.txt  Doxyfile  LICENSE  README  README.cpp  compute_dfx.cpp  compute_dfx.h  compute_dfxi.cpp  compute_dj.cpp  compute_dji.cpp  compute_shape.cpp  main.cpp  main.h  set_bc.cpp  set_connectivity.cpp  set_mesh.cpp
html/: annotated.html  classes.html  compute__dfx_8cpp.html  compute__dfx_8h.html  compute__dfx_8h_source.html  compute__dfxi_8cpp.html  compute__dj_8cpp.html  compute__dji_8cpp.html  compute__shape_8cpp.html  files.html  formula.repository  functions.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cpp.html  main_8h.html  main_8h_source.html  structconnectivity-members.html  structconnectivity.html  structcoordinate-members.html  structcoordinate.html
html/search/: all_0.js  all_1.js  classes_0.js  files_0.js  functions_0.js  search.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
latex/: annotated.tex  compute__dfx_8cpp.tex  compute__dfx_8h.tex  compute__dfxi_8cpp.tex  compute__dj_8cpp.tex  compute__dji_8cpp.tex  compute__shape_8cpp.tex  files.tex  index.tex  main_8cpp.tex  main_8h.tex  refman.tex  structconnectivity.tex  structcoordinate.tex
